Fix alignment and font size tabs settings (#4230)

--- a/public/css/sass/components/settingsPanel/OtherTab.scss
+++ b/public/css/sass/components/settingsPanel/OtherTab.scss
@@ -16,7 +16,7 @@
   }
 
   .options-box h3 {
-    font-size: 19px;
+    font-size: 18px;
     margin-bottom: 0;
   }
 
@@ -28,6 +28,11 @@
     line-height: 22px;
     align-items: start;
     text-align: left;
+
+    > p {
+      font-size: 16px;
+      color: colors.$grey6;
+    }
   }
 
   .options-box.option-unavailable p,
@@ -193,7 +198,7 @@
 .characters-counter-box {
   display: flex;
   flex-direction: column;
-  padding: 30px 0;
+  padding: 10px 0;
 
   > :last-child {
     padding-bottom: 0;
